# VRAV-Messenger-

./: LICENSE  README.md  debug.keystore.base64  metadata.json  pubspec.yaml
.github/workflows/: build.yml
app/: build.gradle.kts
app/src/main/java/com/example/: MainActivity.kt  VravViewModel.kt
app/src/main/java/com/example/crypto/: VravCrypto.kt
app/src/main/java/com/example/data/: PinataUploader.kt  VravDatabase.kt
app/src/main/java/com/example/ui/theme/: Color.kt  Theme.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/: ExampleRobolectricTest.kt  GreetingScreenshotTest.kt
lib/: main.dart
vrav-core/: Cargo.toml
vrav-core/src/: crypto_bridge.rs  double_ratchet.rs  lib.rs  p2p_bridge.rs
